added searchPage with thymeleaf